--- a/xiangyee-backend/public/index.html
+++ b/xiangyee-backend/public/index.html
@@ -610,7 +610,7 @@
           <label class="text-sm font-medium text-neutral-700">Card Number</label>
           <input id="pay-card" type="text" inputmode="numeric" placeholder="Enter Card Number" maxlength="19"
             class="w-full border border-neutral-300 p-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-brand-red" />
-          <div class="text-xs text-neutral-500">Test card: 4242 4242 4242 4242 (success)</div>
+          <div class="text-xs text-neutral-500">Test card: 4242 4242 4242 4242 (error)</div>
         </div>
 
         <div class="grid grid-cols-2 gap-3">
@@ -622,7 +622,7 @@
 
           <div class="space-y-2">
             <label class="text-sm font-medium text-neutral-700">CVV</label>
-            <input id="pay-cvv" type="password" inputmode="numeric" placeholder="123" maxlength="4"
+            <input id="pay-cvv" type="password" inputmode="numeric" placeholder="123" maxlength="3"
               class="w-full border border-neutral-300 p-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-brand-red" />
           </div>
         </div>
