Update dynasty font styling on index page

--- a/xiangyee-backend/public/index.html
+++ b/xiangyee-backend/public/index.html
@@ -9,7 +9,7 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=ZCOOL+XiaoWei&family=Noto+Serif+SC:wght@400;600;700&display=swap" rel="stylesheet">
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -17,12 +17,17 @@
     tailwind.config = {
       theme: {
         extend: {
-          fontFamily: { sans: ['Inter', 'ui-sans-serif', 'system-ui'] },
+          fontFamily: {
+            // ✅ Use dynasty fonts as your default
+            sans: ['"Noto Serif SC"', '"ZCOOL XiaoWei"', 'serif'],
+            dynasty: ['"ZCOOL XiaoWei"', '"Noto Serif SC"', 'serif'],
+          },
           colors: { brand: { red: '#dc2626' } }
         }
       }
     }
-  </script>
+</script>
+
 
   <style>
     html { scroll-behavior: smooth; }
@@ -32,6 +37,16 @@
     .no-scrollbar { -ms-overflow-style:none; scrollbar-width:none; }
     .zoomable { cursor: zoom-in;transition: transform 220ms ease, box-shadow 220ms ease;will-change: transform; }
     @media (hover: hover) and (pointer: fine) { .zoomable:hover { transform: scale(1.06); }
+  
+  /* ✅ Dynasty headings */
+  h1, h2, h3, .dynasty-title {
+    font-family: "ZCOOL XiaoWei", "Noto Serif SC", serif !important;
+    letter-spacing: 0.03em;
+  }
+
+  /* ✅ Body text: elegant serif but readable */
+  body {
+    font-family: "Noto Serif SC", ui-sans-serif, system-ui, serif !important;
   }
 
   /* lightbox */
