--- a/xiangyee-backend/public/index.html
+++ b/xiangyee-backend/public/index.html
@@ -795,15 +795,15 @@
       document.getElementById("my-order")?.classList.remove("hidden");
       document.getElementById("my-order-link")?.classList.remove("hidden");
       document.getElementById("my-order-link-mobile")?.classList.remove("hidden");
-      document.getElementById("my-order-btn")?.classList.remove("hidden");
       document.getElementById("my-order-footer")?.classList.remove("hidden");
+      document.getElementById("my-order-btn-mobile")?.classList.remove("hidden");
     }
     function hideMyOrderTab() {
       document.getElementById("my-order")?.classList.add("hidden");
       document.getElementById("my-order-link")?.classList.add("hidden");
       document.getElementById("my-order-link-mobile")?.classList.add("hidden");
-      document.getElementById("my-order-btn")?.classList.add("hidden");
       document.getElementById("my-order-footer")?.classList.add("hidden");
+      document.getElementById("my-order-btn-mobile")?.classList.add("hidden");
     }
 
     async function fetchOrderById(orderId) {
