--- a/xiangyee-backend/public/index.html
+++ b/xiangyee-backend/public/index.html
@@ -73,6 +73,7 @@
 
       <!-- Nav (desktop) -->
       <nav class="hidden md:flex items-center gap-6 text-sm">
+        <a id="my-order-link" href="#my-order" class="hidden hover:text-brand-red">My Order</a>
         <a href="#about" class="hover:text-brand-red">About</a>
         <a href="#menu" class="hover:text-brand-red">Menu</a>
         <a href="#gallery" class="hover:text-brand-red">Gallery</a>
@@ -131,6 +132,7 @@
   <!-- Mobile Nav -->
   <div id="mobile-nav" class="md:hidden hidden border-t border-neutral-200 bg-white">
     <div class="max-w-6xl mx-auto px-4 py-3 flex flex-col gap-2 text-sm">
+      <a id="my-order-link-mobile" href="#my-order" class="hidden py-2 hover:text-brand-red">My Order</a>
       <a href="#about" class="py-2 hover:text-brand-red">About</a>
       <a href="#menu" class="py-2 hover:text-brand-red">Menu</a>
       <a href="#gallery" class="py-2 hover:text-brand-red">Gallery</a>
@@ -573,6 +575,53 @@
     </span>
   </button>
 
+  <!-- Mock Gateway Modal -->
+  <!-- <div id="gateway-modal" class="fixed inset-0 z-[80] hidden">
+    <div id="gateway-backdrop" class="absolute inset-0 bg-black/50"></div>
+
+    <div class="relative mx-auto mt-24 w-[92%] max-w-md rounded-2xl bg-white shadow-2xl border border-neutral-200 overflow-hidden">
+      <div class="p-4 border-b border-neutral-200 flex items-center justify-between">
+        <div class="font-bold">Mock Payment Gateway</div>
+        <button id="gateway-close" class="p-2 rounded-lg hover:bg-neutral-100">✕</button>
+      </div>
+
+      <div class="p-5 space-y-4">
+        <div class="rounded-xl bg-neutral-50 border border-neutral-200 p-4">
+          <div class="text-sm text-neutral-500">Order Number</div>
+          <div id="gw-order-id" class="font-mono font-semibold break-all">—</div>
+
+          <div class="mt-3 text-sm text-neutral-500">Amount</div>
+          <div id="gw-amount" class="text-2xl font-black">$0.00</div>
+        </div>
+
+        <div class="space-y-2 text-sm text-neutral-600">
+          <div class="flex items-center justify-between">
+            <span>Payment method</span>
+            <span class="font-semibold">Card (Demo)</span>
+          </div>
+          <div class="flex items-center justify-between">
+            <span>Status</span>
+            <span id="gw-status" class="font-semibold text-amber-700">Awaiting payment</span>
+          </div>
+        </div>
+
+        <button id="gw-pay"
+          class="w-full px-4 py-3 rounded-xl bg-brand-red text-white font-semibold hover:bg-red-700">
+          Pay Now
+        </button>
+
+        <button id="gw-cancel"
+          class="w-full px-4 py-3 rounded-xl bg-white border border-neutral-300 font-semibold hover:border-brand-red hover:text-brand-red">
+          Cancel
+        </button>
+
+        <p class="text-xs text-neutral-500">
+          Demo only. No real payment is processed.
+        </p>
+      </div>
+    </div>
+  </div> -->
+
     <!-- Simple Payment Modal (Mock) -->
   <div id="pay-modal" class="fixed inset-0 z-[90] hidden">
     <div id="pay-backdrop" class="absolute inset-0 bg-black/50"></div>
@@ -746,6 +795,7 @@
       document.getElementById("my-order")?.classList.remove("hidden");
       document.getElementById("my-order-link")?.classList.remove("hidden");
       document.getElementById("my-order-link-mobile")?.classList.remove("hidden");
+      document.getElementById("my-order-btn")?.classList.remove("hidden");
       document.getElementById("my-order-footer")?.classList.remove("hidden");
       document.getElementById("my-order-btn-mobile")?.classList.remove("hidden");
     }
@@ -753,6 +803,7 @@
       document.getElementById("my-order")?.classList.add("hidden");
       document.getElementById("my-order-link")?.classList.add("hidden");
       document.getElementById("my-order-link-mobile")?.classList.add("hidden");
+      document.getElementById("my-order-btn")?.classList.add("hidden");
       document.getElementById("my-order-footer")?.classList.add("hidden");
       document.getElementById("my-order-btn-mobile")?.classList.add("hidden");
     }
@@ -1149,6 +1200,58 @@
       document.body.classList.remove("overflow-hidden");
     }
 
+    // // --------------------
+    // // MOCK GATEWAY (IN-PAGE)
+    // // --------------------
+    // let pendingOrderId = null;   // keep for backend tracking/receipt
+    // let pendingAmount = 0;
+
+    // // ✅ show SAME order number as "Order status & collection"
+    // function openGateway(orderNo, amount, orderId) {
+    //   pendingOrderId = orderId;
+    //   pendingAmount = Number(amount || 0);
+
+    //   document.getElementById("gw-order-id").textContent = String(orderNo || "—");
+    //   document.getElementById("gw-amount").textContent = money(pendingAmount);
+
+    //   const statusEl = document.getElementById("gw-status");
+    //   statusEl.textContent = "Awaiting payment";
+    //   statusEl.className = "font-semibold text-amber-700";
+
+    //   document.getElementById("gateway-modal").classList.remove("hidden");
+    //   document.body.classList.add("overflow-hidden");
+    // }
+
+    // function closeGateway() {
+    //   document.getElementById("gateway-modal").classList.add("hidden");
+    //   document.body.classList.remove("overflow-hidden");
+    // }
+
+    // async function submitMockPayment({ orderId, amountCents }) {
+    //   const cardNumber = document.getElementById("card-number").value;
+
+    //   const res = await fetch(`${API_BASE}/payments/charge`, {
+    //     method: "POST",
+    //     headers: { "Content-Type": "application/json" },
+    //     body: JSON.stringify({
+    //       order_id: orderId,
+    //       amount_cents: amountCents,
+    //       card_number: cardNumber,
+    //     }),
+    //   });
+
+    //   const data = await res.json();
+
+    //   if (!res.ok) throw new Error(data.error || "Payment failed");
+
+    //   if (data.payment.status !== "success") {
+    //     throw new Error("Card declined (mock)");
+    //   }
+
+    //   return data.payment;
+    // }
+
+    // --------------------
     // ✅ SIMPLE PAYMENT MODAL (IN-PAGE, NO BACKEND)
     // --------------------
     let pendingOrderId = null;
