--- a/xiangyee-backend/public/admin.html
+++ b/xiangyee-backend/public/admin.html
@@ -118,7 +118,7 @@
   <!-- Toast container -->
   <div id="toast-container" class="fixed bottom-4 right-4 space-y-2 z-50"></div>
 
-  <!-- EDIT MODAL -->
+  <!-- ✅ EDIT MODAL -->
   <div id="edit-modal" class="fixed inset-0 hidden z-50">
     <div id="edit-backdrop" class="absolute inset-0 bg-black/40"></div>
     <div class="absolute inset-0 flex items-center justify-center p-4">
@@ -227,43 +227,10 @@
     logoutBtn.classList.toggle("hidden", !authed);
   }
 
-  // =========================
-  // SSE: Real-time push for Orders
-  // =========================
-  let ordersStream = null;
-
-  function setupOrdersStream() {
-    clearOrdersStream();
-    if (!token) return;
-
-    const streamUrl = `${API_BASE}/orders/stream?token=${encodeURIComponent(token)}`;
-    ordersStream = new EventSource(streamUrl);
-
-    ordersStream.addEventListener("connected", () => {
-      // console.log("Orders SSE connected");
-    });
-
-    ordersStream.addEventListener("orders_updated", () => {
-      loadOrders(false); // refresh instantly when pushed
-    });
-
-    ordersStream.onerror = () => {
-      // console.log("Orders SSE error, auto-retrying...");
-    };
-  }
-
-  function clearOrdersStream() {
-    if (ordersStream) {
-      ordersStream.close();
-      ordersStream = null;
-    }
-  }
-
   function doLogout() {
     token = null;
     localStorage.removeItem("xiangyee_token");
     clearAutoRefresh();
-    clearOrdersStream(); // stop SSE
     setAuthedUI(false);
   }
 
@@ -303,9 +270,7 @@
       loadOrders(true);
       loadReservations(true);
       loadMenuAdmin(true);
-
       setupAutoRefresh();
-      setupOrdersStream(); // ✅ start SSE
 
     } catch (err) {
       console.error(err);
@@ -447,6 +412,7 @@
     div.className = "p-4 rounded-xl border bg-neutral-50";
     applyUnreadStyle(div, unreadOrderIds.has(o.id));
 
+    // ✅ FIX: use getOrderItems(o) instead of only o.items
     const itemsArr = getOrderItems(o);
 
     div.innerHTML = `
@@ -666,6 +632,7 @@
       .replaceAll("'", "&#039;");
   }
 
+  // ✅ Edit modal wiring
   const editModal = document.getElementById("edit-modal");
   const editClose = document.getElementById("edit-close");
   const editBackdrop = document.getElementById("edit-backdrop");
@@ -770,6 +737,7 @@
             ${m.is_available ? "Set Unavailable" : "Set Available"}
           </button>
 
+          <!-- ✅ Remove is hidden (Option B) -->
           <button class="del hidden px-3 py-2 rounded-lg border text-sm bg-white hover:bg-neutral-100">
             Remove
           </button>
@@ -789,6 +757,7 @@
       loadMenuAdmin(true);
     };
 
+    // kept but hidden
     div.querySelector(".del").onclick = async () => {
       if (!confirm(`Remove "${m.name_en}"? (This will hide it)`)) return;
       await authedFetch(`${API_BASE}/menu/admin/${m.id}`, {
@@ -849,6 +818,7 @@
     }
   }
 
+  // ====== ADD MENU ITEM ======
   const menuForm = document.getElementById("menu-form");
   menuForm.addEventListener("submit", async (e) => {
     e.preventDefault();
@@ -886,6 +856,7 @@
     }
   });
 
+  // filters
   document.getElementById("menu-refresh").onclick = () => loadMenuAdmin(true);
   document.getElementById("menu-search").addEventListener("input", refreshMenuView);
   document.getElementById("menu-category").addEventListener("change", refreshMenuView);
@@ -894,14 +865,9 @@
   // ====== AUTO REFRESH ======
   function setupAutoRefresh() {
     clearAutoRefresh();
-
-    // Orders polling is now just fallback (SSE handles real-time)
-    ordersInterval = setInterval(() => { if (token) loadOrders(false); }, 30000);
-
-    // Reservations still poll
+    ordersInterval = setInterval(() => { if (token) loadOrders(false); }, 5000);
     resInterval = setInterval(() => { if (token) loadReservations(false); }, 5000);
   }
-
   function clearAutoRefresh() {
     if (ordersInterval) clearInterval(ordersInterval);
     if (resInterval) clearInterval(resInterval);
@@ -909,6 +875,7 @@
     resInterval = null;
   }
 
+  // ====== WIRE EVENTS ======
   document.getElementById("login-form").addEventListener("submit", login);
   logoutBtn.onclick = doLogout;
 
@@ -918,7 +885,6 @@
     loadReservations(true);
     loadMenuAdmin(true);
     setupAutoRefresh();
-    setupOrdersStream(); // start SSE on reload
   } else {
     setAuthedUI(false);
   }
